--- a/text-to-image-generator-frontend/package.json
+++ b/text-to-image-generator-frontend/package.json
@@ -10,5 +10,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.x.x",
+    "postcss": "^8.x.x",
+    "tailwindcss": "^3.x.x"
   }
 }
