--- a/text-to-image-generator-frontend/package.json
+++ b/text-to-image-generator-frontend/package.json
@@ -5,15 +5,15 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "^0.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
   "devDependencies": {
-    "autoprefixer": "^10.x.x",
-    "postcss": "^8.x.x",
-    "tailwindcss": "^3.x.x"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
   }
 }
