--- a/bc/package.json
+++ b/bc/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "text-to-image-generator-backend",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "openai": "^4.6.0",
-    "dotenv": "^16.0.3"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  },
+  "devDependencies": {
+    "@types/react": "^19.1.8"
   }
 }
